# plog-converter

./: .editorconfig  .travis.yml  CMakeLists.txt  JsonUtils.h  PVS-StudioVersionInfo.h  PathFilter.cpp  PathFilter.h  README.md  application.cpp  application.h  argsextentions.cpp  argsextentions.h  charmap.cpp  charmap.h  configparser.cpp  configparser.h  configs.h  helpmessageoutput.cpp  helpmessageoutput.h  ioutput.cpp  ioutput.h  iworker.cpp  iworker.h  leveltransform.cpp  leveltransform.h  logparserworker.cpp  logparserworker.h  main.cpp  messagefilter.cpp  messagefilter.h  messageparser.cpp  messageparser.h  multipleoutput.cpp  multipleoutput.h  outputfactory.cpp  outputfactory.h  resources.cmake  samewarningsadaptor.cpp  samewarningsadaptor.h  samewarningsfilter.cpp  (+13 more)
.github/workflows/: build.yml
Formats/: csvoutput.cpp  csvoutput.h  defectdojooutput.cpp  defectdojooutput.h  errorfileoutput.cpp  errorfileoutput.h  errorfileverboseoutput.cpp  errorfileverboseoutput.h  gitlaboutput.cpp  gitlaboutput.h  htmloutput.cpp  htmloutput.h  jsonoutput.cpp  jsonoutput.h  misracomplianceoutput.cpp  misracomplianceoutput.h  sarifoutput.cpp  sarifoutput.h  sarifvscodeoutput.cpp  sarifvscodeoutput.h  simplehtml.cpp  simplehtml.h  tasklistoutput.cpp  tasklistoutput.h  tasklistverboseoutput.cpp  tasklistverboseoutput.h  teamcityoutput.cpp  teamcityoutput.h  totalsoutput.cpp  totalsoutput.h  xmloutput.cpp  xmloutput.h
Resources/: sort.js
